--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body{
     font:14px/1.3 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#727272;
     font-weight:400;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 p, ul{
     margin:0 0 25px;
